[gd_scene load_steps=11 format=3 uid="uid://dr3n25lp8t06p"]

[ext_resource type="Texture2D" uid="uid://cm32bytp7ywab" path="res://Assets/sprites/Box.png" id="1_0csh1"]
[ext_resource type="Script" path="res://Scripts/box.gd" id="1_y2tvp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ry7xj"]
size = Vector2(16, 14)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n5fij"]
radius = 1.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7veei"]
size = Vector2(10, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_my2hs"]
size = Vector2(10, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4hpj8"]
size = Vector2(0.5, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4utw"]
size = Vector2(0.5, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4t8a"]
size = Vector2(14, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6tjwq"]
size = Vector2(10, 3)

[node name="Box" type="RigidBody2D"]
collision_layer = 9
lock_rotation = true
freeze_mode = 1
linear_damp_mode = 1
linear_damp = 1.0
script = ExtResource("1_y2tvp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0csh1")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_ry7xj")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_n5fij")

[node name="Left" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(-5, 0)
shape = SubResource("RectangleShape2D_7veei")

[node name="Right" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(5, 0)
shape = SubResource("RectangleShape2D_my2hs")

[node name="CollisionLeft" type="CollisionShape2D" parent="."]
position = Vector2(-18.75, 0)
shape = SubResource("RectangleShape2D_4hpj8")
disabled = true

[node name="CollisionRight" type="CollisionShape2D" parent="."]
position = Vector2(18.75, 0)
shape = SubResource("RectangleShape2D_x4utw")
disabled = true

[node name="Box Beneath" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box Beneath"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_h4t8a")

[node name="Box above" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box above"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_6tjwq")

[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_exited" from="Left" to="." method="_on_left_body_exited"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
[connection signal="body_exited" from="Right" to="." method="_on_right_body_exited"]
[connection signal="area_entered" from="Box Beneath" to="." method="_on_box_beneath_area_entered"]
[connection signal="area_exited" from="Box Beneath" to="." method="_on_box_beneath_area_exited"]
